--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -113,10 +113,10 @@
 
 <p>To understand your tax obligations, continue to one of the following depending on the type of relationship:</p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="tax-obligations-employee.html">Employee and employer relationship</a>  </li>
-<li class="cnjnctn-col"><a href="tax-obligations-self.html">Self-employed and payer relationship</a>  </li>
-<li class="cnjnctn-col"><a href="tax-obligations-psb.html">Incorporated employee and payer relationship</a>  </li>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><a href="tax-obligations-employee.html">Employee and employer</a></li>
+<li class="cnjnctn-col"><a href="tax-obligations-self.html">Self-employed and payer</a></li>
+<li class="cnjnctn-col"><a href="tax-obligations-psb.html">Incorporated employee and payer</a></li>
 </ul>
 
 
