--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -58,14 +58,14 @@
 
       <div aria-hidden="true">
     <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted"> </p>
-    <h1 class="gc-thickline mrgn-tp-0">Determine the employment status: Employee, incorporated employee or self-employed</h1>
+    <h1 class="gc-thickline mrgn-tp-0">Determine the employment status: Employee, self-employed or incorporated employee</h1>
   </div>
 
 <div class="row">
             
 <div class="col-md-8">
 <div id="ajax-classification">
-<p>It is important to determine if a worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong>. Employment status has direct impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
+<p>It is important to determine if a worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong>. Employment status has direct impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
 </div>
  	
 <nav class="provisional gc-subway">
