--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Contract formed in the province of Quebec - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
+         <title>Contract formed in the province of Quebec - Determine the employment status: EEmployee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -52,7 +52,7 @@
                 title: "Payroll",
                 href: "../../index.html"
               },{
-                title: "Determine the employment status: Employee, incorporated employee or self-employed",
+                title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "index.html"
              
               }
@@ -66,7 +66,7 @@
 
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">Determine the employment status: Employee, incorporated employee or self-employed</h1>
+  <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
   <ul>
 
  <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
