--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Self-employed and payer relationship - Understand your tax obligations - Determine the employment status: Employee, incorporated employee or self-employed - Canada.ca</title>
+         <title>Self-employed and payer relationship - Understand your tax obligations - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -53,7 +53,7 @@
                 href: "../../../index.html"
              
              },{
-                title: "Determine the employment status: Employee, incorporated employee or self-employed",
+                title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "../../index.html"
              },{
                 title: "Understand your tax obligations",
@@ -68,7 +68,7 @@
          <main role="main" property="mainContentOfPage" class="container">
 
 <nav class="provisional gc-subway">
-  <h1 id="gc-document-nav">Determine the employment status: Employee, incorporated employee or self-employed</h1>
+  <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
   <ul>
 
 <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
