--- a/jmlt333/taxes.html
+++ b/jmlt333/taxes.html
@@ -350,7 +350,7 @@ Taxes</h1>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="/en/services/taxes/excise-taxes-duties-and-levies.html">Excise and specialty taxes</a></h3>
-                    <p>Underused Housing Tax, Fuel charge, Luxury Tax, customs tariff, Air Travellers Security Charge, other duties and taxes</p>
+                    <p>Underused Housing Tax, fuel charge, Luxury Tax, customs tariff, Air Travellers Security Charge, excise duties and taxes</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="/en/services/taxes/charities.html">Charities and giving</a></h3>
