--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -113,6 +113,8 @@
 
 <p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
 
+<p><i class="fas fa-exclamation-triangle fa-xl text-warning"></i> If you are not sure if the worker is an incorporated employee, continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
+
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">PSB worker</a> </li>
