--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -111,6 +111,8 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
+<p><i class="fas fa-exclamation-triangle fa-xl text-warning"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
+
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Self-employed worker</a> </li>
