--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -111,7 +111,7 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p><i class="fas fa-exclamation-triangle fa-xl text-warning"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
+<p><i class="fas fa-exclamation-triangle fa-2xl text-primary"></i> If you are not sure if the worker is self-employed, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
