--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -113,7 +113,7 @@
 
 <p>Incorporated employees and payers have different tax obligations if the incorporated employees <strong>perform the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
 
-<p><i class="fa-solid fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an incorporated employee, continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
+<p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an incorporated employee, continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
 
 <p>Understanding the tax obligations based on the individual:</p>
 <ul>
