--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -110,7 +110,7 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p><i class="fa-solid fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an employee, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
+<p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an employee, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
 
 <p>Understanding the tax obligations based the individual:</p>
 <ul>
