--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -112,7 +112,7 @@
 
 <p><i class="fas fa-user-tag fa-2xl text-primary"></i> If you are not sure if the worker is an employee, continue to: <a href="factors.html">Determine if the worker is an employee or self-employed</a></p>
 
-<p>Understanding the tax obligations based the individual:</p>
+<p>Understanding the tax obligations based on the individual:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Employer</a> </li>
