--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -184,32 +184,12 @@
 
  <details id="tab2"> <summary>Payer</summary>
 
-<p>On this page:</p>
-<ul>
-<li><a href="#1A">Income tax obligations</a></li>
-<li><a href="#2B">Canada Pension Plan contributions</a></li>
-<li><a href="#3C">Quebec Pension Plan contributions</a></li>
-<li><a href="#4D">Employment Insurance contributions</a></li>
-<li><a href="#5E">GST/HST obligations</a></li>
-</ul> 
+<h3>Withholding, remitting and reporting the payment on a slip</h3>
+<div data-ajax-replace="/cra-arc/payroll/calculate/payment/fees-other.html#ajax-info"></div>
 
-<h3>Withholding and remitting</h3>
-<p>Generally, the payer <strong>does not</strong> withhold and remit the following on the payment made to the worker who is a PSB:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> Income tax <small>- <strong>Only</strong> withhold and remit on the payment for services at the rate of 15% if the PSB is a non-resident recipient</small></li>
-<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
-<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong>withhold or remit</small></li> 
-<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> GST/HST <small>- <strong>Only</strong> withhold and remit on the payment for services where applicable if the PSB is for a construction subcontractor payment </small></li>
-</ul>
-
-<h3>Reporting the payment on the PSB's slip</h3>
-<p>Generally, the payer must report the payment made to the worker who is a PSB on the following slip:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A, T4A-NR, T5018 or T1204 slip <small>- Depending on who the payment is made to</small></li>	
-</ul>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
 
-<h3>Reporting the payment on the payer's income tax return</h3>
+<h3>Reporting the payment on the income tax return</h3>
 <p>Generally, the payer must report the payment made to the worker who is a PSB on one of their following income tax return as a business expense:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
