--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -94,7 +94,7 @@
       <a href="tax-obligations-self.html#gc-document-nav" class="visible-xs visible-sm">Self-employed and payer relationship </a></li>
   
        
-<li><a href="tax-obligations.psb.html" class="active" aria-current="page">Incorporated employee and payer relationship</a></li>
+<li><a href="tax-obligations-psb.html" class="active" aria-current="page">Incorporated employee and payer relationship</a></li>
                        
                             </ul>
 	</li>
