--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -192,8 +192,8 @@
 <h3>Reporting the payment on the income tax return</h3>
 <p>Generally, the payer must report the payment made to the worker who is a PSB on one of their following income tax return as a business expense:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
-<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">File T1  returns</a> <small>- On line XXX or schedule XXX </small></li>
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- On line XXX or schedule XXX  </small></li>	
 </ul>
  </details>
 </li>	
