--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -190,10 +190,10 @@
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
 
 <h3>Reporting the payment on the income tax return</h3>
-<p>Generally, the payer must report the payment made to the worker who is a PSB on one of their following income tax return as a business expense:</p>
+<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html">File T1  returns</a> <small>- On line XXX or schedule XXX </small></li>
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- On line XXX or schedule XXX  </small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/report-business-income-expenses.html">Form T2125</a> <small> when filing your Income Tax and Benefit Return</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing your Corporation Income Tax Return</small></li>	
 </ul>
  </details>
 </li>	
