--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -200,13 +200,19 @@
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
-<h3>Reporting the payment on the payer's income tax return</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on one of their following income tax return as a business expense:</p>
+<h3>Withholding, remitting and reporting the payment on a slip</h3>
+<div data-ajax-replace="/cra-arc/payroll/calculate/payment/fees-other.html#ajax-info"></div>
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
+
+<h3>Reporting the payment on the income tax return</h3>
+<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T1 return <small>- On line XXX or schedule XXX </small></li>
-<li><span class="fas fa-check fa-li text-success"></span> T2 return <small>- On line XXX or schedule XXX  </small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a> (business or professional activities), <a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a> (farming activites) or <a https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a> (fishing activities) <small> when filing your Income Tax and Benefit Return</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing your Corporation Income Tax Return</small></li>	
 </ul>
- 
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a>.</p>
+
 </details>
 </div></div>
   
@@ -233,30 +239,7 @@
 </ul>
 
 
-<section id="psb-special" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Tax deductions, tax rates and eligible expenses for a PSB</h2>
-	</header>	<div class="modal-body">		
-	
-<h3>Tax deductions and tax rates</h3>
-<p><span class="fas fa-times text-danger fa-lg"> </span> A PSB is <strong>not eligible </strong>for:</p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-5-page-5-t2-return.html#P2969_218288">General tax rate reduction</a>  </li>
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-4-page-4-t2-return.html#P2862_208254">Small business deduction</a> </li>
-</ul>
-<p>This means that a PSB is subject to the <strong>full </strong><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-tax-rates.html">federal and provincial corporate tax rates</a> on all taxable income, <strong>plus an additional 5%.</strong></p>
-
-
-<h3>Eligible expenses</h3>
-<p>A PSB is <strong>limited </strong>to <strong>all</strong> of the following deduction expenses: </p>
-<ul class="fa-ul">
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Salary and wages the corporation pays to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Any benefit or allowance the corporation provides to its incorporated employee(s) </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Certain expenses of the corporation associated with selling property or negotiating contracts </li>
-<li ><span class="fas fa-check fa-li fa-lg text-success"> </span> Legal expenses incurred by the corporation in collecting amounts owing </li>
-</ul>
-
-
-	</div></section>
 
 
 
