--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -208,10 +208,10 @@
 <h3>Reporting the payment on the income tax return</h3>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
 <ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a> (business or professional activities), <a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a> (farming activites) or <a https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a> (fishing activities) <small> when filing your Income Tax and Benefit Return</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing your Corporation Income Tax Return</small></li>	
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a>, <a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042, Statement of Farming Activities</a> or <a https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121, Statement of Fishing Activities</a>  <small> when filing their Income Tax and Benefit Return</small></li>
+<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing their Corporation Income Tax Return</small></li>	
 </ul>
- <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a>.</p>
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
 
 </details>
 </div></div>
