--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -191,13 +191,13 @@
 
 <h3>Reporting the payment on the income tax return</h3>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a> (business or professional activities) <small> when filing your Income Tax and Benefit Return</small></li>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a> <small> when filing their Income Tax and Benefit Return</small></li>
 
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/report-business-income-expenses.html">Form T2125, Statement of Business or Professional Activities</a> <small> when filing their Income Tax and Benefit Return</small></li>
-<li><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing their Corporation Income Tax Return</small></li>	
+<li class="cnjnctn-col"><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing their Corporation Income Tax Return</small></li>	
 </ul>
- <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a>.</p>
+
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
 
  </details>
 </li>	
