--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -184,7 +184,7 @@
 
  <details id="tab2"> <summary>Payer</summary>
 
-<h3>Withholding, remitting and reporting the payment on a slip</h3>
+<h3>Withholding, remitting and reporting deductions from the payment on a slip</h3>
 <div data-ajax-replace="/cra-arc/payroll/calculate/payment/fees-other.html#ajax-info"></div>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
