--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -168,51 +168,39 @@
 
  <details id="tab2"><summary>Payer</summary>
 
-<p>On this page:</p>
-<ul>
-<li><a href="#1A">Income tax obligations</a></li>
-<li><a href="#2B">Canada Pension Plan contributions</a></li>
-<li><a href="#3C">Quebec Pension Plan contributions</a></li>
-<li><a href="#4D">Employment Insurance contributions</a></li>
-<li><a href="#5E">GST/HST obligations</a></li>
-</ul> 
-
-<h3>Withholding and remitting deductions</h3>
+<h3>Withholding, remitting and reporting deductions on the payment</h3>
 <p>Generally, the payer <strong>does not</strong> withhold or remit the following deductions on the payment made to the self-employed worker:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold or remit</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold or remit</small></li> 	
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold or remit</small></li> 
+<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
 </ul>
 <p class="mrgn-tp-lg">Learn more: <a href="https://test.canada.ca/cra-arc/payroll/calculate/when/index.html">Get ready to make deductions</a></p>
 
-<h3>Remitting GST/HST </h3>
-<p>Generally, the payer <strong>does not</strong> remit the following on the payment made to the self-employed worker:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
-</ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
  
-<h3>Reporting the payment on the self-employed worker's slip</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on the following slip:</p>
-<ul class="fa-ul mrgn-bttm-md">
-<li><span class="fas fa-check fa-li text-success"></span> T4A slip <small> </small></li>	
-</ul>
+<h3>Reporting the payment on a slip</h3>
+<p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. 
+
 <p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
-<h3>Withholding, remitting and reporting the payment on a slip</h3>
-<div data-ajax-replace="/cra-arc/payroll/calculate/payment/fees-other.html#ajax-info"></div>
-
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
 
 <h3>Reporting the payment on the income tax return</h3>
 <p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a>, <a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042, Statement of Farming Activities</a> or <a https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121, Statement of Fishing Activities</a>  <small> when filing their Income Tax and Benefit Return</small></li>
-
-<li class="cnjnctn-col"><span class="fas fa-check fa-li text-success"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing their Corporation Income Tax Return</small></li>	
+<li class="cnjnctn-col">
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a></li>
+<li class="cnjnctn-col"> <a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042, Statement of Farming Activities</a></li>
+<li class="cnjnctn-col"> <a https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121, Statement of Fishing Activities</a>  <small> when filing their Income Tax and Benefit Return</small></li>
 </ul>
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
+</li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing their Corporation Income Tax Return</small>
+ <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
+</li>	
+</ul>
+
 
 </details>
 </div></div>
