--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -190,14 +190,16 @@
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
 
 <h3>Reporting the payment on the income tax return</h3>
-<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
+<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a> <small> when filing their Income Tax and Benefit Return</small>
+<li class="cnjnctn-col"><h4>T1 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a>  </p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
 </li>
 
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a> <small>when filing their Corporation Income Tax Return</small>
+<li class="cnjnctn-col"><h4>T2 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a></p>
 
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
 </li>	
