--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -186,7 +186,7 @@
 
 
 <h3>Reporting the payment on the income tax return</h3>
-<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following:</p>
+<p>Generally, the payer includes the payment made to the worker in their calculation of business expenses using one of the following form when filing their income tax return:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
 <ul class="list-unstyled cnjnctn-type-or">
