--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -206,9 +206,10 @@
 </details>
 </div></div>
   
-
+<div id="ajax-help">
 <h2 id="h_records">Keeping your records</h2>
-
+<p>You must keep track of all of the income that you earned and the expenses that you incurred for business purposes.</p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records.html">Keeping records</a></p>
 
 <h2 id="h_2">Help for small businesses</h2>
 <p>If you are a small business and would like help in understanding your tax obligations, you can ask for a visit from a Canada Revenue Agency Liaison Officer. Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/liaison-officer-initiative-loi.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cra-liaison-officer">Liaison Officer service - free tax help for small business owners and self-employed individuals</a>.</p>
@@ -227,7 +228,7 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance.html">Compliance and enforcement at CRA</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/combat-tax-crimes.html">Tax evasion, understanding the consequences</a></li>
 </ul>
-
+</div>
 
 
 
