--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -125,31 +125,27 @@
                <div class="tabpanels">
    
  <details id="tab1"><summary>PSB worker</summary>
+<h3>Reporting the payment on the income tax return</h3>
+<p>Generally, the payer <strong>must</strong> provide the PSB worker with a slip which includes any fees or other amounts paid for services.</p>
 
-<p>On this page:</p>
-<ul>
-<li><a href="#1a">Income tax obligations</a></li>
-<li><a href="#2b">Canada Pension Plan contributions</a></li>
-<li><a href="#3c">Quebec Pension Plan contributions</a></li>
-<li><a href="#4d">Employment Insurance contributions</a></li>
-<li><a href="#5e">GST/HST obligations</a></li>
-</ul> 
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/fees-other-amounts-services.html">Payments of fees for services</a>.</p>
 
-<h3>Income tax obligations</h3>
+<p>The PSB worker includes the amount of the payment received from the payer in their calculation of income earned using one of the following form when filing their income tax return:an amount the payment made to the worker in their calculation of business expenses when filing their income tax return:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>T1 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a>  </p>
 
-<p>Generally, the PSB must:</p>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
+</li>
+
+<li class="cnjnctn-col"><h4>T2 return</h4> 
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a></p>
+
+ <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
+</li>	
 </ul>
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations.html">Corporations</a></p>
 
-<h3>Payroll obligations</h3>
-<p>The PSB must withhold and remit deductions for any employees of the PSB's corporation (same as regular corporations). They must also report on a slip any payment made to their employees.</p>
-
-<p class="mrgn-tp-lg">Continue to: <a href="#tab1">Employee/Employer</a></p>
-
-<h3>CPP/QPP, EI and QPIP - PSB's contributions obligations</h3>
+<h3>Making CPP/QPP, EI and QPIP contributions</h3>
 <p>Generally, the PSB worker calculates their contributions and reports the following amounts when they fill out their <strong>T2 corporation income tax return</strong>:</p>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- <strong>Only</strong> if the PSB worker participates in the special EI program</small></li>
@@ -164,10 +160,11 @@
 <li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
 </ul>
 
-<h3>GST/HST obligations</h3>
+<h3>Withholding and remitting the GST/HST</h3>
 <p>For the PSB, the GST/HST obligations are the same as other corporations. </p>
 
 <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+
 <h3>Example of non-compliance</h3>
 
 <p>Examples of <strong>non-compliance</strong> situation for PSB corporations: </p>
