--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -153,7 +153,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- <strong>Only</strong> if the PSB worker works in the  <strong>Province of Quebec</strong></small></li>
 </ul>
 
-<p class="mrgn-tp-lg">Learn more: </p>
+<p>Learn more: </p>
 <ul>
 <li><a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
 <li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
@@ -163,7 +163,7 @@
 <h3>Withholding and remitting the GST/HST</h3>
 <p>For the PSB, the GST/HST obligations are the same as other corporations. </p>
 
-<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></p>
 
 <h3>Example of non-compliance</h3>
 
