--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -211,7 +211,7 @@
 </div></div>
   
 
-<div data-ajax-replace="/tax-obligations-self.html#ajax-info"></div>
+<div data-ajax-replace="/cra-arc/payroll/guidance/tax-obligations-psb.html#ajax-info"></div>
 
 
 <section id="psb-special" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Tax deductions, tax rates and eligible expenses for a PSB</h2>
