--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -104,7 +104,7 @@
 </nav>
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Self-employed and payer relationship: Understand your tax obligations</h1>
- <div id="ajax-classification">
+
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
@@ -180,7 +180,7 @@
 
  
 <h3>Reporting the payment on a slip</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. 
+<p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. </p>
 
 <p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
 
@@ -190,14 +190,14 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4>T1 return</h4> 
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125, Statement of Business or Professional Activities</a></li>
-<li class="cnjnctn-col"><a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042, Statement of Farming Activities</a></li>
-<li class="cnjnctn-col"><a href=https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121, Statement of Fishing Activities</a></li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2125.html">Form T2125</a>, Statement of Business or Professional Activities</li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2042.html">Form T2042</a>, Statement of Farming Activities</li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2121.html">Form T2121</a>, Statement of Fishing Activities</li>
 </ul>
  <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/personal-income/self-employment-income-lines-13499-14299-gross-income-lines-13500-14300-net-income.html">Lines 13499 to 14300 – Self-employment income </a></p>
 </li>
 <li class="cnjnctn-col"><h4>T2 return</h4> 
-<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125, Income Statement Information</a></p>
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2sch125.html">Schedule 125</a>, Income Statement Information</p>
  <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-income-tax-return/completing-your-corporation-income-tax-t2-return.html">Completing your corporation income tax return </a></p>
 </li>	
 </ul>
