--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -207,10 +207,15 @@
 </div></div>
   
 <div id="ajax-help">
-<h2 id="h_penalty">What happens if the slip is distributed late or not distributed</h2>
+<h2 id="h_penalty">Receiving or distributing the slip</h2>
+<p>Slips are prepared by the employer or the payer. If the slip is late or lost, the worker can ask the payer of the slip for a copy. </p>
 <p>If the payer distributes the slips late or does not distribute, the payer may be assessed a penalty of $25 per day per slip with a minimum penalty of $100 and a maximum of $2,500.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></p>
-
+<p>Learn more:</p>
+<ul> 
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/a-copy-your-tax-slips.html">Get a copy of a slip</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/distribute-slips.html#h_3">Distribute the slips</a></li>
+</li>	
+</ul>
 
 <h2 id="h_records">Keeping your records</h2>
 <p>You must keep track of all of the income that you earned and the expenses that you incurred for business purposes.</p>
