--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -123,14 +123,6 @@
                <div class="tabpanels">
    
  <details id="tab1"><summary>Self-employed worker</summary>
-<p>On this page:</p>
-<ul>
-<li><a href="#1a">Income tax obligations</a> </li>
-<li><a href="#2b">Canada Pension Plan contributions</a> </li>
-<li><a href="#3c">Quebec Pension Plan contributions</a> </li>
-<li><a href="#4d">Employment Insurance contributions</a> </li>
-<li><a href="#5e">GST/HST obligations</a> </li>
-</ul> 
 
 <h3>Income tax obligations</h3>
 <p>Generally, the self-employed worker calculates and reports the following amounts when they fill out their <strong>T1 income tax and benefit return</strong>:</p>
@@ -180,9 +172,9 @@
 
  
 <h3>Reporting the payment on a slip</h3>
-<p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. </p>
+<p>Generally, the payer must report the payment made to the self-employed worker on a T4A slip. Depending on the situation, the payer may need to fill out a T4A-NR instead.</p>
 
-<p class="mrgn-tp-lg">Learn more: <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns.html">Fill out the slips and summaries</a></p>
 
 
 <h3>Reporting the payment on the income tax return</h3>
