--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -209,21 +209,21 @@
 </li>	
 </ul>
 
-<h2 id="h_records">Keeping your records</h2>
-<p>You must keep track of all of the income that you earned and the expenses that you incurred for business purposes.</p>
+<h2 id="h_records">Keeping records</h2>
+<p>Individuals must keep track of all of the income that they earned and the expenses that they incurred for business purposes.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/keeping-records.html">Keeping records</a></p>
 
 <h2 id="h_2">Help for small businesses</h2>
-<p>If you are a small business and would like help in understanding your tax obligations, you can ask for a visit from a Canada Revenue Agency Liaison Officer. </p>
+<p>Small businesses that would like help in understanding their tax obligations can ask for a visit from a Canada Revenue Agency Liaison Officer. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/compliance/liaison-officer-initiative-loi.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_cra-liaison-officer">Liaison Officer service - free tax help for small business owners and self-employed individuals</a>.</p>
 
-<h2 id="h_3">Correcting your tax affairs</h2>
-<p>If you would like to correct your tax affairs, you can apply for relief under the Voluntary Disclosure Program.</p>
+<h2 id="h_3">Correcting tax affairs</h2>
+<p>Individuals that would like to correct their tax affair can apply for relief under the Voluntary Disclosure Program.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/voluntary-disclosures-program-overview.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_taxes-voluntary-disclosures">Voluntary Disclosures Program &ndash; Introduction</a></p>
 
 <h2 id="h_4">Consequences of non-compliance</h2>
-<p>Depending on the situation, penalties may be assessed. If you do not pay an amount that is due, the CRA may apply interest from the day your payment was due. </p>
+<p>Depending on the situation, penalties may be assessed. If individuals do not pay an amount that is due, the CRA may apply interest from the day the payment was due. </p>
 
 <p>Learn more:</p>
 
