--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -125,6 +125,20 @@
                <div class="tabpanels">
    
  <details id="tab1"><summary>PSB worker</summary>
+
+<p>Generally, the PSB must:</p>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">File T2  returns</a> <small>- <strong>Not eligible</strong> to claim the same <a href="#psb-special" aria-controls="psb-special" class="overlay-lnk" role="button">tax deductions and expenses <span class="far fa-question-circle"></span></a></small></li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> <small> - Same as regular corporations</small> </li>
+</ul>
+<p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations.html">Corporations</a></p>
+
+<h3>Payroll obligations</h3>
+<p>The PSB must withhold and remit deductions for any employees of the PSB's corporation (same as regular corporations). They must also report on a slip any payment made to their employees.</p>
+
+<p class="mrgn-tp-lg">Continue to: <a href="#tab1">Employee/Employer</a></p>
+
+
 <h3>Reporting the payment on the income tax return</h3>
 <p>Generally, the payer <strong>must</strong> provide the PSB worker with a slip which includes any fees or other amounts paid for services.</p>
 
