--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1175,7 +1175,7 @@ html:lang(fr) .cnjnctn-or:before {
           <h4 id="affected">Affected owner</h4>
           <p>You <strong>must file</strong> a return for each residential property that you own as an affected owner on December 31.</p>
           <p>You will also have to pay the tax unless you qualify for an exemption.</p>
-          <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
+          <p>If you are an affected owner of more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
           <p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property.</p>
           <p>An <strong>affected owner</strong> includes, but is not limited to, the following owners of a residential property in Canada:</p>
           <ul>
@@ -1298,8 +1298,9 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
             <p class="mrgn-tp-lg">Review tax notices:</p>
 		  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank"> UHTN5, Exemption for vacation properties </a></p>
-          <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
-	  </details>
+         <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn15/questions-answers-underused-housing-tax.html#_Toc131148558">UHTN15, Questions that relate to UHTN5</a></p>
+		  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
+		   </details>
         </details>
         
 		
