--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1298,8 +1298,8 @@ html:lang(fr) .cnjnctn-or:before {
             </div>
             <p class="mrgn-tp-lg">Review tax notices:</p>
 		  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn5/exemption-vacation-properties.html#_Toc122423683" target="_blank"> UHTN5, Exemption for vacation properties </a></p>
-         <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn15/questions-answers-underused-housing-tax.html#_Toc131148558">UHTN15, Questions that relate to UHTN5</a></p>
-		  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
+         <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn15/questions-answers-underused-housing-tax.html#_Toc131148558" target="_blank">UHTN15, Questions that relate to UHTN5</a></p>
+		  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html" target="_blank">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
 		   </details>
         </details>
         
