--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -806,7 +806,7 @@ html:lang(fr) .cnjnctn-or:before {
               <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank">Apply for an ITN</a></p>
               <p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by completing the application form (Form T1261) and mailing it with your paper return.</p>
               <p></p>
-              You will not be able to compete an electronic return without a valid ITN.
+              You will not be able to complete an electronic return without a valid ITN.
               </p>
               <p>Make sure to file your ITN application form, all supporting documentation required for the ITN application, and your Underused Housing Tax return together.</p>
             </details>
